fixed the spacing problem

--- a/about.css
+++ b/about.css
@@ -1,6 +1,7 @@
 .Pic {
     height: 30px;
     width: 30px;
+    padding: 50pt;
 }
 
 /* HEADER */
@@ -8,8 +9,9 @@ html, body {
     /* Normalize */
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
     background: #ececec;
-    overflow-x: hidden;
   }
   
   .header {
@@ -20,8 +22,7 @@ html, body {
     width: 100%;
     margin: 0;
     padding: 3.75pt;
-    padding-left: 15pt;
-    padding-right: 4pt;
+    padding-left: 50pt;
     /*  MENU WILL FOLLOW AS YOU SCROLL position: fixed; */
     z-index: 9000;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, .6);
@@ -33,7 +34,8 @@ html, body {
 
   ul li{
     display: inline;
-    padding: 10pt;
+    padding: 5pt;
+    padding-left: 70pt;
     font-size: 14pt;
   }
   
